--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -14,31 +14,476 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b2479a89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"mysql+pymysql://root:pass@localhost:8703/imdb\", echo_pool=True)"
+    "engine = create_engine(\"mysql+pymysql://root:pass@localhost:8791/imdb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5ebef369",
+   "execution_count": 3,
+   "id": "18c8a821",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    genre  mean_score  total_titles\n",
+      "0  Comedy      6.9977        409127\n",
+      "1  Action      7.0232        162618\n"
+     ]
+    }
+   ],
    "source": [
-    "df: pd.DataFrame = pd.read_sql_query(\n",
+    "# What is the mean score of all \"Action\" movies and \"Comedy\" movies, and how many titles are there of each genre? \n",
+    "# Rename the \"average_rating\" column to \"mean_score\" and round to 4 decimal places. Rename the title count to \"total_titles\".\n",
+    "\n",
+    "df1: pd.DataFrame = pd.read_sql_query(\n",
     "    f\"\"\"\n",
-    "    SELECT person_id, title_id, category AS job_category\n",
-    "    FROM jobs\n",
-    "    LIMIT 10\n",
+    "    SELECT \n",
+    "      genre, \n",
+    "      ROUND(AVG(average_rating), 4) AS mean_score, \n",
+    "      COUNT(ratings.title_id) AS total_titles\n",
+    "    FROM ratings \n",
+    "    JOIN genres \n",
+    "      ON ratings.title_id = genres.title_id\n",
+    "    WHERE genre = 'Action' or genre = 'Comedy'\n",
+    "    GROUP BY genre\n",
     "    \"\"\",\n",
     "    engine\n",
     "    )\n",
     "\n",
-    "print(df.info())"
+    "print(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1f387023",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     primary_title  start_year\n",
+      "0        Hereafter        2010\n",
+      "1         J. Edgar        2011\n",
+      "2      Jersey Boys        2014\n",
+      "3  American Sniper        2014\n",
+      "4            Sully        2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What movies were directed by Clint Eastwood between 2010 and 2016? \n",
+    "\n",
+    "df2: pd.DataFrame = pd.read_sql_query(\n",
+    "    f\"\"\"\n",
+    "    SELECT primary_title, start_year\n",
+    "    FROM persons\n",
+    "    JOIN jobs \n",
+    "      ON persons.person_id = jobs.person_id\n",
+    "    JOIN titles \n",
+    "      ON jobs.title_id = titles.title_id\n",
+    "    WHERE first_name = 'Clint' \n",
+    "    AND last_name = 'Eastwood' \n",
+    "    AND category = 'director'\n",
+    "    AND start_year >= 2010\n",
+    "    AND start_year <= 2016\n",
+    "    \"\"\",\n",
+    "    engine\n",
+    "    )\n",
+    "\n",
+    "print(df2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d99f89b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       primary_title  mean_score\n",
+      "0  The Lord of the Rings: The Fellowship of the Ring         8.8\n",
+      "1              The Lord of the Rings: The Two Towers         8.8\n",
+      "2      The Lord of the Rings: The Return of the King         9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the average rating of each of the Lord of the Rings films? Show them in order of release date.\n",
+    "\n",
+    "df3: pd.DataFrame = pd.read_sql_query(\n",
+    "    f\"\"\"\n",
+    "    SELECT primary_title, average_rating AS mean_score\n",
+    "    FROM titles\n",
+    "    JOIN ratings \n",
+    "      ON titles.title_id = ratings.title_id\n",
+    "    WHERE primary_title LIKE %s\n",
+    "    AND title_type = 'movie'\n",
+    "    ORDER BY start_year\n",
+    "    \"\"\",\n",
+    "    engine,\n",
+    "    params=(\"The Lord of the Rings:%\",)\n",
+    "    )\n",
+    "\n",
+    "print(df3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc701169",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     first_name  last_name                                      primary_title   \n",
+      "0         Keanu     Reeves                                        Point Break  \\\n",
+      "1         Keanu     Reeves                                              Speed   \n",
+      "2         Keanu     Reeves                                         The Matrix   \n",
+      "3         Keanu     Reeves                                The Matrix Reloaded   \n",
+      "4      Laurence  Fishburne                                         The Matrix   \n",
+      "5      Laurence  Fishburne                                The Matrix Reloaded   \n",
+      "6      Laurence  Fishburne                                       Mystic River   \n",
+      "7      Laurence  Fishburne                                          Contagion   \n",
+      "8   Carrie-Anne       Moss                                         The Matrix   \n",
+      "9   Carrie-Anne       Moss                                            Memento   \n",
+      "10  Carrie-Anne       Moss                             The Matrix Revolutions   \n",
+      "11  Carrie-Anne       Moss                                               Fido   \n",
+      "12         Hugo    Weaving  The Lord of the Rings: The Fellowship of the Ring   \n",
+      "13         Hugo    Weaving      The Lord of the Rings: The Return of the King   \n",
+      "14         Hugo    Weaving              The Lord of the Rings: The Two Towers   \n",
+      "15         Hugo    Weaving                                     V for Vendetta   \n",
+      "16        Chris   Connelly                                      The Bodyguard   \n",
+      "17        Chris   Connelly                                   Last Action Hero   \n",
+      "\n",
+      "    runtime_minutes  \n",
+      "0               122  \n",
+      "1               116  \n",
+      "2               136  \n",
+      "3               138  \n",
+      "4               136  \n",
+      "5               138  \n",
+      "6               138  \n",
+      "7               106  \n",
+      "8               136  \n",
+      "9               113  \n",
+      "10              129  \n",
+      "11               93  \n",
+      "12              178  \n",
+      "13              201  \n",
+      "14              179  \n",
+      "15              132  \n",
+      "16              129  \n",
+      "17              130  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# What movies are the cast of \"The Matrix (1999)\" known for? Display their first and last names, and each movie's primary title and runtime.\n",
+    "\n",
+    "df4: pd.DataFrame = pd.read_sql_query(\n",
+    "    f\"\"\"\n",
+    "    WITH actors AS (\n",
+    "        SELECT first_name, last_name, kfts.title_id\n",
+    "        FROM titles \n",
+    "        JOIN jobs \n",
+    "        ON titles.title_id = jobs.title_id\n",
+    "        JOIN persons \n",
+    "        ON jobs.person_id = persons.person_id\n",
+    "        JOIN known_for_titles AS kfts\n",
+    "        ON kfts.person_id = persons.person_id\n",
+    "        WHERE titles.primary_title LIKE %s\n",
+    "        AND titles.start_year = 1999\n",
+    "        AND (\n",
+    "            category = 'actor'\n",
+    "            OR \n",
+    "            category = 'actress'\n",
+    "        )\n",
+    "    )\n",
+    "    SELECT first_name, last_name, primary_title, runtime_minutes\n",
+    "    FROM actors JOIN titles \n",
+    "    ON actors.title_id = titles.title_id\n",
+    "    WHERE title_type = 'movie';\n",
+    "    \"\"\",\n",
+    "    engine,\n",
+    "    params=(\"%The Matrix%\",)\n",
+    "    )\n",
+    "\n",
+    "print(df4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7ccd7d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>start_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sully</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jersey Boys</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Sniper</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>J. Edgar</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hereafter</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     primary_title  start_year\n",
+       "4            Sully        2016\n",
+       "2      Jersey Boys        2014\n",
+       "3  American Sniper        2014\n",
+       "1         J. Edgar        2011\n",
+       "0        Hereafter        2010"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assume a DataFrame of the form of the result in Question 2. \n",
+    "# Sort it by \"start_year\" in descending order.\n",
+    "\n",
+    "df2.sort_values(by=[\"start_year\"], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c99e8f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>mean_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Fellowship of the Ring</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Two Towers</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Return of the King</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                primary_title  mean_score\n",
+       "0  The Fellowship of the Ring         8.8\n",
+       "1              The Two Towers         8.8\n",
+       "2      The Return of the King         9.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assume a DataFrame of the form of the result in Question 3. \n",
+    "# Remove the \"The Lord of the Rings: \" part of the string from each title.\n",
+    "\n",
+    "df3[\"primary_title\"] = df3[\"primary_title\"].str.replace(\"The Lord of the Rings: \", \"\")\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd4145d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>titles</th>\n",
+       "      <th>avg_runtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Carrie-Anne</th>\n",
+       "      <th>Moss</th>\n",
+       "      <td>[The Matrix, Memento, The Matrix Revolutions, ...</td>\n",
+       "      <td>117.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chris</th>\n",
+       "      <th>Connelly</th>\n",
+       "      <td>[The Bodyguard, Last Action Hero]</td>\n",
+       "      <td>129.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hugo</th>\n",
+       "      <th>Weaving</th>\n",
+       "      <td>[The Lord of the Rings: The Fellowship of the ...</td>\n",
+       "      <td>172.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Keanu</th>\n",
+       "      <th>Reeves</th>\n",
+       "      <td>[Point Break, Speed, The Matrix, The Matrix Re...</td>\n",
+       "      <td>128.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Laurence</th>\n",
+       "      <th>Fishburne</th>\n",
+       "      <td>[The Matrix, The Matrix Reloaded, Mystic River...</td>\n",
+       "      <td>129.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                  titles   \n",
+       "first_name  last_name                                                      \n",
+       "Carrie-Anne Moss       [The Matrix, Memento, The Matrix Revolutions, ...  \\\n",
+       "Chris       Connelly                   [The Bodyguard, Last Action Hero]   \n",
+       "Hugo        Weaving    [The Lord of the Rings: The Fellowship of the ...   \n",
+       "Keanu       Reeves     [Point Break, Speed, The Matrix, The Matrix Re...   \n",
+       "Laurence    Fishburne  [The Matrix, The Matrix Reloaded, Mystic River...   \n",
+       "\n",
+       "                       avg_runtime  \n",
+       "first_name  last_name               \n",
+       "Carrie-Anne Moss            117.75  \n",
+       "Chris       Connelly        129.50  \n",
+       "Hugo        Weaving         172.50  \n",
+       "Keanu       Reeves          128.00  \n",
+       "Laurence    Fishburne       129.50  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assume a DataFrame of the form of the result in Question 4. \n",
+    "# Make the set of films each actor is known for into a list so that each actor has only one row and average the runtime minutes. \n",
+    "# Set the respective column names to \"titles\" and \"avg_runtime\".\n",
+    "\n",
+    "(\n",
+    "df4.groupby([\"first_name\", \"last_name\"])\n",
+    "    .agg({\"primary_title\" : lambda t: t.tolist(), \"runtime_minutes\" : \"mean\" })\n",
+    "    .rename(columns={\"primary_title\" : \"titles\", \"runtime_minutes\" : \"avg_runtime\"})\n",
+    ")"
    ]
   }
  ],
