Update exercises notebook

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -166,8 +166,6 @@
       "13         Hugo    Weaving      The Lord of the Rings: The Return of the King   \n",
       "14         Hugo    Weaving              The Lord of the Rings: The Two Towers   \n",
       "15         Hugo    Weaving                                     V for Vendetta   \n",
-      "16        Chris   Connelly                                      The Bodyguard   \n",
-      "17        Chris   Connelly                                   Last Action Hero   \n",
       "\n",
       "    runtime_minutes  \n",
       "0               122  \n",
@@ -185,9 +183,7 @@
       "12              178  \n",
       "13              201  \n",
       "14              179  \n",
-      "15              132  \n",
-      "16              129  \n",
-      "17              130  \n"
+      "15              132  \n"
      ]
     }
    ],
@@ -196,27 +192,19 @@
     "\n",
     "df4: pd.DataFrame = pd.read_sql_query(\n",
     "    f\"\"\"\n",
-    "    WITH actors AS (\n",
-    "        SELECT first_name, last_name, kfts.title_id\n",
-    "        FROM titles \n",
-    "        JOIN jobs \n",
-    "        ON titles.title_id = jobs.title_id\n",
-    "        JOIN persons \n",
-    "        ON jobs.person_id = persons.person_id\n",
-    "        JOIN known_for_titles AS kfts\n",
-    "        ON kfts.person_id = persons.person_id\n",
-    "        WHERE titles.primary_title LIKE %s\n",
-    "        AND titles.start_year = 1999\n",
-    "        AND (\n",
-    "            category = 'actor'\n",
-    "            OR \n",
-    "            category = 'actress'\n",
-    "        )\n",
-    "    )\n",
-    "    SELECT first_name, last_name, primary_title, runtime_minutes\n",
-    "    FROM actors JOIN titles \n",
-    "    ON actors.title_id = titles.title_id\n",
-    "    WHERE title_type = 'movie';\n",
+    "    SELECT p.first_name, p.last_name, t2.primary_title, t2.runtime_minutes\n",
+    "    FROM titles t\n",
+    "    JOIN jobs j\n",
+    "      ON t.title_id = j.title_id\n",
+    "    JOIN persons p\n",
+    "      ON p.person_id = j.person_id\n",
+    "    JOIN known_for_titles kft\n",
+    "      ON j.person_id = kft.person_id\n",
+    "    JOIN titles t2\n",
+    "      ON kft.title_id = t2.title_id\n",
+    "    WHERE t.primary_title LIKE '%The Matrix%'\n",
+    "    AND t.start_year = 1999 AND t.title_type = 'movie'\n",
+    "    AND j.category IN ('actor', 'actress')\n",
     "    \"\"\",\n",
     "    engine,\n",
     "    params=(\"%The Matrix%\",)\n",
@@ -424,12 +412,6 @@
        "      <td>117.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Chris</th>\n",
-       "      <th>Connelly</th>\n",
-       "      <td>[The Bodyguard, Last Action Hero]</td>\n",
-       "      <td>129.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Hugo</th>\n",
        "      <th>Weaving</th>\n",
        "      <td>[The Lord of the Rings: The Fellowship of the ...</td>\n",
@@ -455,7 +437,6 @@
        "                                                                  titles   \n",
        "first_name  last_name                                                      \n",
        "Carrie-Anne Moss       [The Matrix, Memento, The Matrix Revolutions, ...  \\\n",
-       "Chris       Connelly                   [The Bodyguard, Last Action Hero]   \n",
        "Hugo        Weaving    [The Lord of the Rings: The Fellowship of the ...   \n",
        "Keanu       Reeves     [Point Break, Speed, The Matrix, The Matrix Re...   \n",
        "Laurence    Fishburne  [The Matrix, The Matrix Reloaded, Mystic River...   \n",
@@ -463,7 +444,6 @@
        "                       avg_runtime  \n",
        "first_name  last_name               \n",
        "Carrie-Anne Moss            117.75  \n",
-       "Chris       Connelly        129.50  \n",
        "Hugo        Weaving         172.50  \n",
        "Keanu       Reeves          128.00  \n",
        "Laurence    Fishburne       129.50  "
